--- a/pages/login.html
+++ b/pages/login.html
@@ -7,20 +7,22 @@
         <title>Connection</title>
     </head>
     <body>
-        <div class="centeredchildren">
-            <form method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
+        <div id="formdiv">
+            <form id="loginform" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
                 <p>Nom d'utilisateur : <input type="text" name="username"/></p>
-                <?php echo login($username, $password);?>
+                <p class="verify"><?php echo usernameVerify($username, false);?></p>
                 <p>Mot de passe : <input type="password" name="password"/></p>
-                <?php echo login($username, $password);?>
+                <p class="verify"><?php echo login($username, $password);?></p>
                 <span><input type="submit" value="Connection"/></span>
                 <br/>
                 <p>Pas de compte ? <button id="signupbutton" type="button" onclick="">Créer un compte</button></p>
+                <input type="hidden" name="pass" value="1"/>
             </form>
         </div>
         <form id="signupform" class="invisible" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
-            <input type="hidden" name="signup" value="1">
+            <input type="hidden" name="state" value="1">
         </form>
+        <script type="text/javascript" src="../js/index.js"></script>
         <script type="text/javascript" src="../js/login.js"></script>
     </body>
 </html>
