--- a/pages/mainpage.html
+++ b/pages/mainpage.html
@@ -8,5 +8,8 @@
     </head>
     <body>
         <p>Hello World</p>
+        <!--LOGS AND SCRIPTS-->
+        <input id="log" type="hidden" name="log" value="<?php echo $log; ?>"/>
+        <script type="text/javascript" src="../js/index.js"></script>
     </body>
 </html>
