--- a/pages/email.html
+++ b/pages/email.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="../css/index.css"/>
+        <link rel="stylesheet" href="../css/index.css">
         <title>vérification E-mail</title>
     </head>
     <body>
