--- a/pages/mobilepage.html
+++ b/pages/mobilepage.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <p>Hello World</p>
-        <!--LOGS AND SCRIPTS-->
-        <input id="log" type="hidden" name="log" value="<?php echo $log; ?>"/>
+        <!--&SCRIPTS-->
+        <script type="text/javascript" src="../js/jQueryUi/external/jquery/jquery.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
     </body>
 </html>
