--- a/pages/singup.html
+++ b/pages/singup.html
@@ -7,7 +7,7 @@
         <title>Créer un compte</title>
     </head>
     <body>
-        <div id="formdiv">
+        <div class="formdiv">
             <form id="signup" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
                 <p>Nom d'utilisateur : <input type="text" name="username" value="<?php echo toUser($username); ?>"/></p>
                 <p class="verify"><?php echo usernameVerify($username, true);?></p>
@@ -26,8 +26,8 @@
         <form id="loginform" class="invisible" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
             <input type="hidden" name="state" value="">
         </form>
-        <!--LOGS AND SCRIPTS-->
-        <input id="log" type="hidden" name="log" value="<?php echo $log; ?>"/>
+        <!--&SCRIPTS-->
+        <script type="text/javascript" src="../js/jQueryUi/external/jquery/jquery.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
         <script type="text/javascript" src="../js/signup.js"></script>
     </body>
