--- a/pages/singup.html
+++ b/pages/singup.html
@@ -18,6 +18,9 @@
                 <p class="verify"><?php echo emailVerify($email);?></p>
                 <span><input id="signupbutton" type="submit" value="Créer un compte" /></span>
                 <br/>
+                <p>Code d'Inscription : <input type="text" name="Acode" value="<?php echo toUser($Acode); ?>"/></p>
+                <p class="verify"><?php echo toUser(Vacode($Acode)); ?></p>
+                <br/>
                 <p>Déjà un compte ? <button id="loginbutton" type="button" onclick="">Se connecter</button></p>
                 <input type="hidden" name="pass" value="1"/>
                 <input type="hidden" name="state" value="1">
