added jQuery externally and not jQuery UI

--- a/pages/login.html
+++ b/pages/login.html
@@ -29,7 +29,7 @@
             <input type="hidden" name="state" value="0">
         </form>
         <!--&SCRIPTS-->
-        
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
         <script type="text/javascript" src="../js/login.js"></script>
     </body>
