--- a/pages/email.html
+++ b/pages/email.html
@@ -27,7 +27,7 @@
             <input type="hidden" name="email" value="<?php echo $email; ?>"/>
         </form>
         <!--&SCRIPTS-->
-        
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
         <script type="text/javascript" src="../js/email.js"></script>
     </body>
