--- a/pages/mobilepage.html
+++ b/pages/mobilepage.html
@@ -10,7 +10,7 @@
     <body>
         <p>Hello World</p>
         <!--&SCRIPTS-->
-        
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
     </body>
 </html>
