--- a/pages/singup.html
+++ b/pages/singup.html
@@ -31,7 +31,7 @@
             <input type="hidden" name="state" value="">
         </form>
         <!--&SCRIPTS-->
-        
+        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
         <script type="text/javascript" src="../js/signup.js"></script>
     </body>
