--- a/pages/login.html
+++ b/pages/login.html
@@ -29,6 +29,11 @@
             <input type="hidden" name="state" value="0">
         </form>
         <!--&SCRIPTS-->
+        <script type="text/javascript">
+            if("<?php echo $Cemail;?>" == "OK"){
+                alert("Votre adresse mail a bien été vérifiée.")
+            }
+        </script>
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
         <script type="text/javascript" src="../js/index.js"></script>
         <script type="text/javascript" src="../js/login.js"></script>
