--- a/pages/email.html
+++ b/pages/email.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         
-        <link rel="stylesheet" href="../css/index.css"/>
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="../css/style.css"/>
+        <link rel="stylesheet" href="../css/style.css">
         <title>vérification E-mail</title>
     </head>
     <body>
