--- a/pages/singup.html
+++ b/pages/singup.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         
-        <link rel="stylesheet" href="../css/index.css"/>
+        <link rel="stylesheet" href="../css/style.css"/>
         <link rel="stylesheet" href="../css/signup.css"/>
         <title>Créer un compte</title>
     </head>
