--- a/pages/login.html
+++ b/pages/login.html
@@ -20,6 +20,7 @@
                 <p>E-mail pas encore vérifiée ? <button id="emailbutton" type="button" onclick ="">Vérifier son E-mail</button></p>
                 <input type="hidden" name="pass" value="1"/>
                 <input type="hidden" name="state" value="-2"/>
+                <!-- TODO : watch button -->
             </form>
         </div>
         <form id="signupform" class="invisible" method="post" action="<?php echo htmlspecialchars($_SERVER['PHP_SELF']);?>">
