--- a/pages/blog.html
+++ b/pages/blog.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="framecontainer">
-            <iframe src="php/build.php?token=<?php echo getToken($username); ?>" frameborder="0" width="400px"></iframe>
+            <iframe src="php/build.php?token=<?php echo getToken($username); ?>" frameborder="0" width="400px" id="frame"></iframe>
         </div>
         <!--&SCRIPTS-->
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
