--- a/pages/blog.html
+++ b/pages/blog.html
@@ -12,7 +12,7 @@
         </div>
         <!--&SCRIPTS-->
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="../js/index.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
         <script type="text/javascript" src="../js/blog.js"></script>
     </body>
 </html>
