--- a/pages/email.html
+++ b/pages/email.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         
         <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/email.css">
         <title>vérification E-mail</title>
     </head>
     <body>
@@ -28,7 +28,7 @@
         </form>
         <!--&SCRIPTS-->
         <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="../js/index.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
         <script type="text/javascript" src="../js/email.js"></script>
     </body>
 </html>
