--- a/pages/login.html
+++ b/pages/login.html
@@ -28,20 +28,26 @@
                     <span></span>
                     Connexion
                 </button>
-                <button id="signupbutton" type="button" onclick="">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Créer un compte
-                </button>
-                <button id="emailbutton" type="button" onclick ="">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    Vérifier son E-mail
-                </button>
+                <div id="signup">
+                    Pas encore de compte ?
+                    <button id="signupbutton" class="link" type="button" onclick="">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Créer un compte
+                    </button>
+                </div>
+                <div id="email">
+                    E-mail non vérifiée ?
+                    <button id="emailbutton" class="link" type="button" onclick ="">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        Vérifier son E-mail
+                    </button>
+                </div>
                 <input type="hidden" name="pass" value="1"/>
                 <input type="hidden" name="state" value="-2"/>
                 <!-- TODO : watch button -->
