--- a/pages/singup.html
+++ b/pages/singup.html
@@ -50,7 +50,7 @@
                 </button>
                 <!--& LOGIN &-->
                 <div id="userlogin">
-                    Déjà un compte ? <button id="loginbutton" type="button" onclick="">Se connecter</button>
+                    Déjà un compte ? <button id="loginbutton" class="link" type="button" onclick="">Se connecter</button>
                 </div>
                 <input type="hidden" name="pass" value="1"/>
                 <input type="hidden" name="state" value="1">
