--- a/pages/singup.html
+++ b/pages/singup.html
@@ -2,8 +2,8 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="stylesheet" href="../css/signup.css"/>
+        <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
+        <link rel="stylesheet" href="../css/signup.css?<?php echo $version ?>"/>
         <title>Créer un compte</title>
     </head>
     <body>
@@ -60,8 +60,8 @@
             <input type="hidden" name="state" value="">
         </form>
         <!--& SCRIPTS &-->
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
-        <script type="text/javascript" src="../js/signup.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/main.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/signup.js?<?php echo $version ?>"></script>
     </body>
 </html>
