--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,8 +2,8 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/blog.css">
+        <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
+        <link rel="stylesheet" href="../css/blog.css?<?php echo $version ?>"/>
         <title>Terminale H JDA Blog</title>
     </head>
     <body>
@@ -11,8 +11,8 @@
             <iframe src="php/build.php?token=<?php echo getToken($username); ?>" frameborder="0" width="400px" id="frame"></iframe>
         </div>
         <!--&SCRIPTS-->
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
-        <script type="text/javascript" src="../js/blog.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/main.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/blog.js?<?php echo $version ?>"></script>
     </body>
 </html>
