--- a/pages/email.html
+++ b/pages/email.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         
-        <link rel="stylesheet" href="../css/style.css"/>
-        <link rel="stylesheet" href="../css/email.css">
+        <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
+        <link rel="stylesheet" href="../css/email.css?<?php echo $version ?>"/>
         <title>vérification E-mail</title>
     </head>
     <body>
@@ -27,8 +27,8 @@
             <input type="hidden" name="email" value="<?php echo $email; ?>"/>
         </form>
         <!--&SCRIPTS-->
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
-        <script type="text/javascript" src="../js/email.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/main.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/email.js?<?php echo $version ?>"></script>
     </body>
 </html>
