--- a/pages/login.html
+++ b/pages/login.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/login.css">
+        <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
+        <link rel="stylesheet" href="../css/login.css?<?php echo $version ?>"/>
         <title>Connection</title>
     </head>
     <body>
@@ -65,8 +65,8 @@
                 alert("Votre adresse mail a bien été vérifiée.")
             }
         </script>
-        <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
-        <script type="text/javascript" src="../js/login.js"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/main.js?<?php echo $version ?>"></script>
+        <script type="text/javascript" src="../js/login.js?<?php echo $version ?>"></script>
     </body>
 </html>
