reponsive + renamed pages to html

--- a/html/email.html
+++ b/html/email.html
@@ -2,10 +2,10 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        
+        <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
         <link rel="stylesheet" href="../css/email.css?<?php echo $version ?>"/>
-        <title>vérification E-mail</title>
+        <title>Vérification E-mail</title>
     </head>
     <body>
         <!--TODO : warn about killing = suppr data if not registered-->
