--- a/html/singup.html
+++ b/html/singup.html
@@ -2,6 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
         <link rel="stylesheet" href="../css/signup.css?<?php echo $version ?>"/>
         <title>Créer un compte</title>
