--- a/html/login.html
+++ b/html/login.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
-        
+        <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
         <link rel="stylesheet" href="../css/login.css?<?php echo $version ?>"/>
         <title>Connection</title>
