--- a/html/old.blog.html
+++ b/html/old.blog.html
@@ -2,14 +2,16 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="../css/style.css?<?php echo $version ?>"/>
         <link rel="stylesheet" href="../css/blog.css?<?php echo $version ?>"/>
-        <title>Terminale H JDA Blog</title>
+        <title>TH Blog</title>
     </head>
     <body>
-        <div id="framecontainer">
-            <iframe src="php/build.php?token=<?php echo getToken($username); ?>" frameborder="0" width="400px" id="frame"></iframe>
-        </div>
+        <!--<div id="framecontainer">
+            <iframe src="php/build.php?token=<?php echo getToken($username); ?>&state=0" frameborder="0" width="400px" id="frame"></iframe>
+        </div>-->
+        
         <!--&SCRIPTS-->
         <script src="https://code.jquery.com/jquery-3.6.0.js?<?php echo $version ?>"></script>
         <script type="text/javascript" src="../js/main.js?<?php echo $version ?>"></script>
