--- a/html/login.html
+++ b/html/login.html
@@ -35,7 +35,7 @@
                     <span></span>
                     Annuler
                 </button>
-                <button id="signupbutton" class="styled thin" type="button" onclick="">
+                <button id="signupbutton" class="styled thin green" type="button" onclick="">
                     <span></span>
                     <span></span>
                     <span></span>
